--- a/index.html
+++ b/index.html
@@ -7,126 +7,150 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE FIASCO</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Source+Sans+Pro:wght@400;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
     <!-- ==== Header ==== -->
     <header>
-        <section class="logo">
-            <a href="" title="home">THE FIASCO</a>
+        <section class="navigation">
+            <section class="logo">
+                <a href="" title="home">THE FIASCO</a>
+            </section>
+            <nav>
+                <a href="" title="about">ABOUT FIASCO’S</a>
+                <a href="" title="menu">MENU</a>
+                <a href="" title="recepies">RECIPES</a>
+                <a href="" title="contact">CONTACT</a>
+                <button href="" title="make reservation">MAKE RESERVATION</button>
+            </nav>
         </section>
-        <nav>
-            <a href="" title="about">ABOUT FIASCO’S</a>
-            <a href="" title="menu">Menu</a>
-            <a href="" title="recepies">RECIPES</a>
-            <a href="" title="contact">CONTACT</a>
-            <button href="" title="make reservation">MAKE RESERVATION</button>
-        </nav>
+        <section class="hero-section center-column">
+            <span class="span">Welcome</span>
+            <h1>THE FIASCO</h1>
+            <p>MEDITERRANEAN SPECIALITIES</p>
+        </section>
     </header>
 
     <!-- ==== Main section ==== -->
     <main>
 
-        <!-- ==== Hero Section ==== -->
-        <section>
-            <h2>Welcome</h2>
-            <h1>THE FIASCO</h1>
-            <p>MEDITERRANEAN SPECIALITIES</p>
-        </section>
-
         <!-- ==== Discover Section ==== -->
-        <section>
-            <section>
-                <img src="/assets/burger.jpg" alt=" burger">
+        <section class="discover-container">
+            <img id="background-1" src="/assets/oranges.jpg">
+            <section class="discover-section center-row">
+                <section class="image-border">
+                    <img src="/assets/burger.jpg" alt=" burger">
+                </section>
+                <article class="article">
+                    <hr>
+                    <span class="span">Discover</span>
+                    <h2 class="title">OUR GASTRONOMY</h2>
+                    <p class="text">Attending a trade show can be a very effective method of promoting your company and
+                        its
+                        products. And
+                        one of the most effective ways to optimize your trade show display and increase traffic to your
+                        booth is through the use of banner stands. </p>
+                    <button class="button">See more ></button>
+                </article>
             </section>
-            <article>
-                <hr>
-                <span>Discover</span>
-                <h2>OUR GASTRONOMY</h2>
-                <p>Attending a trade show can be a very effective method of promoting your company and its products. And
-                    one of the most effective ways to optimize your trade show display and increase traffic to your
-                    booth is through the use of banner stands. </p>
-                <button>See more ></button>
-            </article>
         </section>
 
         <!-- ==== Tasteful Section  ==== -->
-        <section>
-            <article>
-                <hr>
-                <span>Tasteful</span>
-                <h2>RECIPES MADE WITH LOVE</h2>
-                <p>Classified advertising is a form of advertising that is particularly common in newspapers and other
-                    periodicals. A classified is usually textually based and can consist of as little as the type of
-                    item being sold, and a contact number to call for more information</p>
-                <button>see more ></button>
-            </article>
-            <section>
-                <img src="/assets/crusted-chicken.jpg" alt=" burger">
+        <scetion class="tasteful-container">
+            <img id="background-2" src="/assets/spices.jpg">
+            <section class="tasteful-section center-row">
+                <article class="article">
+                    <hr>
+                    <span class="span">Tasteful</span>
+                    <h2 class="title">RECIPES MADE WITH LOVE</h2>
+                    <p class="text">Classified advertising is a form of advertising that is particularly common in
+                        newspapers and other
+                        periodicals. A classified is usually textually based and can consist of as little as the type of
+                        item being sold, and a contact number to call for more information</p>
+                    <button class="button">see more ></button>
+                </article>
+                <section class="image-border reverse">
+                    <img src="/assets/crusted-chicken.jpg" alt=" burger">
+                </section>
             </section>
-        </section>
-
+        </scetion>
         <!-- ==== Menu Section ==== -->
-        <section>
-            <article>
+        <section class="menu-section center-column">
+            <article class="menu center-column">
                 <hr>
-                <span>Menu</span>
-                <h2>CERTIFIED BIO</h2>
-                <p>Classified advertising is a form of advertising that is particularly common in newspapers and other
+                <span class="span">Menu</span>
+                <h2 class="title">CERTIFIED BIO</h2>
+                <p class="text">Classified advertising is a form of advertising that is particularly common in
+                    newspapers and other
                     periodicals. A classified is usually textually based and can consist of as little as the type of
                     item being sold, and a contact number to call for more information</p>
             </article>
-
-            <section>
-                <a href="">EGGS</a>
-                <a href="">PORC</a>
-                <a href="">CHICKEN</a>
-                <a href="">FISH</a>
-                <a href="">VEGAN</a>
+            <section class="links">
+                <a id="active-link" href="">EGGS</a>
+                <a href="" title="PORC">PORC</a>
+                <a href="" title="CHICKEN">CHICKEN</a>
+                <a href="" title="FISH">FISH</a>
+                <a href="" title="VEGAN">VEGAN</a>
             </section>
 
-            <section>
+            <section class="menu-articles">
+                <img id="polygone" src="/assets/Polygon.png">
                 <!-- Recipe 1 -->
-                <article>
+                <article class="recipe center-row">
                     <img src="/assets/crusted-chicken-square.jpg" alt="recipe 1">
-                    <section>
-                        <h3>Amazing Crusted Chicken</h3>
+                    <section class="recipe-content">
+                        <a href="">
+                            <h3>Amazing Crusted Chicken</h3>
+                        </a>
                         <p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature
                             women of all shapes and sizes enjoying themselves </p>
-                        <span>$20</span>
+                        <span class="span">$20</span>
                     </section>
                 </article>
 
                 <!-- Recipe 2 -->
-                <article>
-                    <section>
-                        <h3>BoBun Light Odd</h3>
+                <article class="recipe center-row">
+                    <section class="recipe-content">
+                        <a href="">
+                            <h3>BoBun Light Odd</h3>
+                        </a>
                         <p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature
                             women of all shapes and sizes enjoying themselves </p>
-                        <span>$20</span>
+                        <span class="span">$20</span>
                     </section>
                     <img src="/assets/bobun-light-square.jpg" alt="recipe 2">
                 </article>
 
                 <!-- Recipe 3 -->
-                <article>
+                <article class="recipe center-row">
                     <img src="/assets/poisson-square.jpg" alt="recipe 3">
-                    <section>
-                        <h3>Amazing Crusted Chicken</h3>
+                    <section class="recipe-content">
+                        <a href="">
+                            <h3>Amazing Crusted Chicken</h3>
+                        </a>
                         <p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature
                             women of all shapes and sizes enjoying themselves </p>
-                        <span>$20</span>
+                        <span class="span">$20</span>
                     </section>
                 </article>
 
                 <!-- Recipe 4 -->
-                <article>
-                    <section>
-                        <h3>Spicy Egg Paella</h3>
+                <article class="recipe center-row">
+                    <section class="recipe-content">
+                        <a href="">
+                            <h3>Spicy Egg Paella</h3>
+                        </a>
                         <p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature
                             women of all shapes and sizes enjoying themselves </p>
-                        <span>$20</span>
+                        <span class="span">$20</span>
                     </section>
                     <img src="/assets/paella-square.jpg" alt="recipe 4">
                 </article>
@@ -134,106 +158,124 @@
         </section>
 
         <!-- ==== Chef Section  ==== -->
-        <section>
-            <article>
+        <section class="chef-section center-row">
+            <article class="chef-content">
                 <hr>
-                <span>Chef</span>
-                <h2>MEET OUR EXECUTIVE CHEF, CHRISTIAN JACOB</h2>
-                <p>If you are considering purchasing a new grill, or barbecue, you will be faced with a multitude of
+                <span class="span">Chef</span>
+                <h2 class="title">MEET OUR EXECUTIVE CHEF, CHRISTIAN JACOB</h2>
+                <p class="text">If you are considering purchasing a new grill, or barbecue, you will be faced with a
+                    multitude of
                     options to choose between. However, there is one choice which you will need to make fairly quickly
                     in your quest for the perfect grill for you. That decision is whether to buy a charcoal or gas
                     grill.<br><br>
                     Wow I have a hankering for some really good grill roasted chicken, the melt in your mouth variety
                     with some fresh homemade salsa slathered right on top.
                 </p>
-                <button>See the cooks ></button>
+                <button class="button">See the cooks ></button>
             </article>
             <img src="/assets/chef.png" alt="">
         </section>
 
         <!-- ==== Reservation Section  ==== -->
-        <section>
-            <article>
+        <section class="reservation-section center-column">
+            <article class="center-column">
                 <hr>
-                <span>Reservation</span>
-                <h2>MAKE RESERVATION</h2>
-                <p>Classified advertising is a form of advertising that is particularly common in newspapers and other
+                <span class="title">Reservation</span>
+                <h2 class="title">MAKE RESERVATION</h2>
+                <p class="text">Classified advertising is a form of advertising that is particularly common in
+                    newspapers and other
                     periodicals. A classified is usually textually based and can consist.
                 </p>
             </article>
 
             <!-- reservation form -->
-            <Form>
-                <input type="text" title="full name" placeholder="FULL NAME (FOCUS)">
-                <select name="nbr person" id="">
-                    <option value="1">FOR 1 PERSONS</option>
-                    <option value="2">FOR 2 PERSONS</option>
-                    <option value="3">FOR 3 PERSONS</option>
-                </select>
-                <select name="time" id="">
-                    <option value="1">13/02/18 AT 8PM</option>
-                    <option value="2">13/02/18 AT 9PM</option>
-                    <option value="3">13/02/18 AT 10PM</option>
-                </select>
-                <button type="submit">RESERVE TABLE</button>
+            <Form class="center-column">
+                <section class="inputs center-row">
+                    <input id="active-input" type="text" title="full name" placeholder="FULL NAME (FOCUS)">
+                    <select name="nbr person" id="">
+                        <option value="1">FOR 1 PERSONS</option>
+                        <option value="2">FOR 2 PERSONS</option>
+                        <option value="3">FOR 3 PERSONS</option>
+                    </select>
+                    <select name="time" id="">
+                        <option value="1">13/02/18 AT 8PM</option>
+                        <option value="2">13/02/18 AT 9PM</option>
+                        <option value="3">13/02/18 AT 10PM</option>
+                    </select>
+                </section>
+                <button type="submit" value="submit">RESERVE TABLE</button>
             </Form>
         </section>
 
         <!-- ==== Recepies Section  ==== -->
-        <section>
-            <article>
-                <hr>
-                <span>Recipes</span>
-                <h2>WE SHARE OUR RECIPES WITH YOU</h2>
-                <p>If you are considering purchasing a new grill, or barbecue, you will be faced with a multitude of
-                    options to choose between. However, there is one choice which you will need.</p>
-            </article>
-
-            <section>
-                <h3><span>29</span>SEP</h3>
-                <p>Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a happy
-                    glow to tossed and composed salads and casseroles.</p>
-            </section>
-            <hr>
-            <section>
-                <h3><span>30</span>SEP</h3>
-                <p>Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a happy
-                    glow to tossed and composed salads and casseroles.</p>
-            </section>
-            <hr>
-            <section>
-                <h3><span>31</span>SEP</h3>
-                <p>Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a happy
-                    glow to tossed and composed salads and casseroles.</p>
+        <section class="recepies-container">
+            <img id="background-3" src="/assets/news-bg.png">
+            <section class="recepies-section">
+                <article>
+                    <hr>
+                    <span class="span">Recipes</span>
+                    <h2 class="title">WE SHARE OUR RECIPES WITH YOU</h2>
+                    <p class="text">If you are considering purchasing a new grill, or barbecue, you will be faced with a
+                        multitude of
+                        options to choose between. However, there is one choice which you will need.</p>
+                </article>
+                <section class="plates">
+                    <section class="plate">
+                        <h3>29<br><small>SEP</small></h3>
+                        <p>Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a
+                            happy
+                            glow to tossed and composed salads and casseroles.</p>
+                    </section>
+                    <hr>
+                    <section class="plate">
+                        <h3>30<br><small>SEP</small></h3>
+                        <p>Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a
+                            happy
+                            glow to tossed and composed salads and casseroles.</p>
+                    </section>
+                    <hr>
+                    <section class="plate">
+                        <h3>31<br><small>SEP</small></h3>
+                        <p>Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a
+                            happy
+                            glow to tossed and composed salads and casseroles.</p>
+                    </section>
+                    <button class="button">Go to our blog ></button>
+                </section>
             </section>
         </section>
-
         <!-- ==== MAP Section  ==== -->
-        <section>
-
+        <section class="map-section">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55075.69589653776!2d-9.53221118077981!3d30.372797966575742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdb3b6f274f70059%3A0x934b6f4c54ce91af!2s116%20Cr%C3%A9perie%20%26%20Salade%20Bar!5e0!3m2!1sar!2sma!4v1625749419255!5m2!1sar!2sma"
+                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
     </main>
 
     <!-- ==== Footer Section  ==== -->
     <footer>
-        <section>
-            <article>
-                <h3>THE FIASCO</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum, sint corporis nostrum,
-                    possimus unde eos vitae eius quasi saepe.</p>
-            </article>
-            <article>
-                <h3>CONTACT INFO</h3>
-                <p>1234 Altschul, New York, NY 10027-0000</p>
-                <p>+1 987 654 3210</p>
-                <p>contact@thefiasco.com</p>
-            </article>
-            <article>
-                <h3>OPENINGS HOURS</h3>
-                <p>Monday to Friday | 10:00 AM - 11:00 PM</p>
-            </article>
+        <img src="/assets/splash.png">
+        <section class="footer-container">
+            <section class="footer-content">
+                <article>
+                    <h3>THE FIASCO</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum, sint corporis
+                        nostrum,
+                        possimus unde eos vitae eius quasi saepe.</p>
+                </article>
+                <article>
+                    <h3>CONTACT INFO</h3>
+                    <p>1234 Altschul, New York, NY 10027-0000</p>
+                    <p>+1 987 654 3210</p>
+                    <p>contact@thefiasco.com</p>
+                </article>
+                <article>
+                    <h3>OPENINGS HOURS</h3>
+                    <p>Monday to Friday | 10:00 AM - 11:00 PM</p>
+                </article>
+            </section>
+            <p><span>2018 THE FIASCO.</span> All rights reserved.</p>
         </section>
-        <p><span>2018 THE FIASCO.</span> All rights reserved.</p>
     </footer>
 
 </body>
