--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body>
 
     <!-- ==== Header ==== -->
-    <header>
+    <header >
         <section class="navigation">
             <section class="logo">
                 <a href="" title="home">THE FIASCO</a>
             </section>
-            <nav>
+            <nav class="center-row">
                 <a href="" title="about">ABOUT FIASCO’S</a>
                 <a href="" title="menu">MENU</a>
-                <a href="" title="recepies">RECIPES</a>
+                <a href="/recipes.html" title="recepies">RECIPES</a>
                 <a href="" title="contact">CONTACT</a>
                 <button href="" title="make reservation">MAKE RESERVATION</button>
             </nav>
@@ -180,7 +180,7 @@
         <section class="reservation-section center-column">
             <article class="center-column">
                 <hr>
-                <span class="title">Reservation</span>
+                <span class="span">Reservation</span>
                 <h2 class="title">MAKE RESERVATION</h2>
                 <p class="text">Classified advertising is a form of advertising that is particularly common in
                     newspapers and other
