--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <section class="logo">
                 <a href="" title="home">THE FIASCO</a>
             </section>
-            <nav class="center-row">
+            <nav>
                 <a href="" title="about">ABOUT FIASCO’S</a>
                 <a href="" title="menu">MENU</a>
                 <a href="/recipes.html" title="recepies">RECIPES</a>
@@ -32,7 +32,7 @@
                 <button href="" title="make reservation">MAKE RESERVATION</button>
             </nav>
         </section>
-        <section class="hero-section center-column">
+        <section class="hero-section">
             <span class="span">Welcome</span>
             <h1>THE FIASCO</h1>
             <p>MEDITERRANEAN SPECIALITIES</p>
@@ -45,7 +45,7 @@
         <!-- ==== Discover Section ==== -->
         <section class="discover-container">
             <img id="background-1" src="/assets/oranges.jpg">
-            <section class="discover-section center-row">
+            <section class="discover-section">
                 <section class="image-border">
                     <img src="/assets/burger.jpg" alt=" burger">
                 </section>
@@ -66,7 +66,7 @@
         <!-- ==== Tasteful Section  ==== -->
         <scetion class="tasteful-container">
             <img id="background-2" src="/assets/spices.jpg">
-            <section class="tasteful-section center-row">
+            <section class="tasteful-section">
                 <article class="article">
                     <hr>
                     <span class="span">Tasteful</span>
@@ -83,8 +83,8 @@
             </section>
         </scetion>
         <!-- ==== Menu Section ==== -->
-        <section class="menu-section center-column">
-            <article class="menu center-column">
+        <section class="menu-section">
+            <article class="menu">
                 <hr>
                 <span class="span">Menu</span>
                 <h2 class="title">CERTIFIED BIO</h2>
@@ -104,7 +104,7 @@
             <section class="menu-articles">
                 <img id="polygone" src="/assets/Polygon.png">
                 <!-- Recipe 1 -->
-                <article class="recipe center-row">
+                <article class="recipe">
                     <img src="/assets/crusted-chicken-square.jpg" alt="recipe 1">
                     <section class="recipe-content">
                         <a href="">
@@ -117,7 +117,7 @@
                 </article>
 
                 <!-- Recipe 2 -->
-                <article class="recipe center-row">
+                <article class="recipe">
                     <section class="recipe-content">
                         <a href="">
                             <h3>BoBun Light Odd</h3>
@@ -130,7 +130,7 @@
                 </article>
 
                 <!-- Recipe 3 -->
-                <article class="recipe center-row">
+                <article class="recipe">
                     <img src="/assets/poisson-square.jpg" alt="recipe 3">
                     <section class="recipe-content">
                         <a href="">
@@ -143,7 +143,7 @@
                 </article>
 
                 <!-- Recipe 4 -->
-                <article class="recipe center-row">
+                <article class="recipe">
                     <section class="recipe-content">
                         <a href="">
                             <h3>Spicy Egg Paella</h3>
@@ -158,7 +158,7 @@
         </section>
 
         <!-- ==== Chef Section  ==== -->
-        <section class="chef-section center-row">
+        <section class="chef-section">
             <article class="chef-content">
                 <hr>
                 <span class="span">Chef</span>
@@ -177,8 +177,8 @@
         </section>
 
         <!-- ==== Reservation Section  ==== -->
-        <section class="reservation-section center-column">
-            <article class="center-column">
+        <section class="reservation-section">
+            <article>
                 <hr>
                 <span class="span">Reservation</span>
                 <h2 class="title">MAKE RESERVATION</h2>
@@ -189,8 +189,8 @@
             </article>
 
             <!-- reservation form -->
-            <Form class="center-column">
-                <section class="inputs center-row">
+            <Form>
+                <section class="inputs">
                     <input id="active-input" type="text" title="full name" placeholder="FULL NAME (FOCUS)">
                     <select name="nbr person" id="">
                         <option value="1">FOR 1 PERSONS</option>
