--- a/recipes.html
+++ b/recipes.html
@@ -31,7 +31,7 @@
                 <button href="" title="make reservation">MAKE RESERVATION</button>
             </nav>
         </section>
-        <section class="hero-section center-column">
+        <section class="hero-section">
             <span class="span">Recipe 1</span>
             <h1>SALT CHICKEN</h1>
             <p>EASY TO COOK | 10MIN PREPARATION</p>
@@ -81,8 +81,8 @@
 
 
         <!-- ==== Like Section  ==== -->
-        <section class="like-section center-column">
-            <article class="Like center-column">
+        <section class="like-section">
+            <article class="like-article">
                 <hr>
                 <span class="span">Like</span>
                 <h2 class="title">YOU MAY ALSO LIKE</h2>
@@ -93,9 +93,9 @@
             <secition class="articles">
 
                 <!-- articles 1 -->
-                <article class="article center-row">
+                <article class="article-content">
                     <img src="/assets/crusted-chicken-square.jpg" alt="recipe 1">
-                    <section class="article-content">
+                    <section>
                         <a href="">
                             <h3>Amazing Crusted Chicken</h3>
                         </a>
@@ -105,9 +105,9 @@
                     </section>
                 </article>
                 <!-- articles 2 -->
-                <article class="article center-row">
+                <article class="article-content">
                     <img src="/assets/crusted-chicken-square.jpg" alt="recipe 1">
-                    <section class="article-content">
+                    <section>
                         <a href="">
                             <h3>Amazing Crusted Chicken</h3>
                         </a>
@@ -117,9 +117,9 @@
                     </section>
                 </article>
                 <!-- articles 3 -->
-                <article class="article center-row">
+                <article class="article-content">
                     <img src="/assets/crusted-chicken-square.jpg" alt="recipe 1">
-                    <section class="article-content">
+                    <section>
                         <a href="">
                             <h3>Amazing Crusted Chicken</h3>
                         </a>
@@ -129,9 +129,9 @@
                     </section>
                 </article>
                 <!-- articles 4 -->
-                <article class="article center-row">
+                <article class="article-content">
                     <img src="/assets/crusted-chicken-square.jpg" alt="recipe 1">
-                    <section class="article-content">
+                    <section>
                         <a href="">
                             <h3>Amazing Crusted Chicken</h3>
                         </a>
@@ -142,7 +142,7 @@
                 </article>
 
             </secition>
-            <section class="pages center-row">
+            <section class="pages">
                 <div id="active" class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
